finally finish (hopefully?)  figuring out OAuth and setting it up.
